[project]
name = "easy-dwpose"
version = "1.0.3"
description = ""
readme = "README.md"
authors = []
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.34.0",
    "imageio>=2.37.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "omegaconf>=2.3.0",
    "onnxruntime>=1.23.2",
    "opencv-python-headless>=4.11.0.86",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
